--- a/Parilet/BottomSheet/Presentation/DestinationInfoView.xib
+++ b/Parilet/BottomSheet/Presentation/DestinationInfoView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DestinationInfoView" customModule="Parilet" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="DestinationInfoView" customModule="Parilet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
